# ucsas_intro_python

./: .gitignore  README.md  index.html  index.md  package-lock.json  package.json  practice.ipynb  presentation.md  pyproject.toml  requirements.txt  workspace.code-workspace
.github/workflows/: build-and-release.yml
assets/: gradient.css
